# mps_motion

./: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  HISTORY.md  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: build_docs.yml  docker-image.yml  main.yml  pypi.yml
benchmark/: dimetrodon.py
datasets/: first_frame.npy  generate_test_data.py
demo/: demo.ipynb  demo_dualtvl10.py  demo_farneback.py  demo_lucas_kanade.py
demo/block_matching/: demo_block_matching.py
demo/dualtvl1/: demo_dualtvl10.py
demo/dualtvl10/: demo_dualtvl10.py
demo/farneback/: demo_farneback.py
demo/lucas_kanade/: demo_lucas_kanade.py
demo/task_queue/: celery_factory.py  celery_queue.py  monitor_size.py
docker/: Dockerfile
docs/: Makefile  _config.yml  _toc.yml  about.md  api.rst  cli.md  conf.py  demo.ipynb  development.md  features.ipynb  gui.ipynb  index.md  index.rst  install.md  installation.rst  make.bat  quickstart.ipynb  usage.rst
mps_motion_tracking/: __init__.py  __main__.py  block_matching.py  cli.py  dualtvl1.py  dualtvl10.py  farneback.py  filters.py  frame_sequence.py  lucas_kanade.py  mechanics.py  motion_tracking.py  scaling.py  stats.py  utils.py  visu.py
src/mps_motion/: __init__.py  __main__.py  block_matching.py  cli.py  dualtvl1.py  farneback.py  filters.py  frame_sequence.py  gui.py  lucas_kanade.py  mechanics.py  motion_tracking.py  scaling.py  stats.py  utils.py  visu.py
tests/: __init__.py  conftest.py  example_traces.npy  first_frame.npy  synthetic_data.py  test_block_matching.py  test_cli.py  test_dualtvl1.py  test_dualtvl10.py  test_farneback.py  test_filters.py  test_frame_sequence.py  test_known_displacement.py  test_lucas_kanade.py  test_lucas_kenade.py  test_mechanics.py  test_motion_tracking.py  test_scaling.py  test_stats.py  test_utils.py
