[metadata]
name = mps_motion_tracking
version = 0.1.0
description = Library for tracking motion in cardiac mps data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComputationalPhysiology/mps_motion_tracking
author = Henrik Finsberg
author_email = henriknf@simula.no
license = LGPL-2.1
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = finite element, mechanics, cardiac, heart

[options]
packages = find:
install_requires =
    ap-features
    daiquiri
    dask-image
    dask[array,diagnostics]
    h5py
    matplotlib
    numpy
    opencv-contrib-python
    opencv-python
    scipy
    tqdm
    typer
    typing-extensions
    cached-property;python_version <= "3.7"
python_requires = >=3.6
zip_safe = False

[options.packages.find]
exclude =
    tests
    demos

[options.extras_require]
benchmark =
    flowiz
dev =
    black
    bump2version
    flake8
    ipython
    mypy
    pre-commit
docs =
    Sphinx
    furo
    myst-parser
    pandoc
test =
    black
    flake8
    mypy
    pre-commit
    pytest
    pytest-cov

[options.package_data]
mps_motion_tracking.example_meshes = *.h5

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=mps_motion_tracking --cov-report html -vv --cov-report term-missing
testpaths =
    tests
filterwarnings =
    ignore::UserWarning
    ignore::DeprecationWarning

[mypy]
files = mps_motion_tracking,tests
ignore_missing_imports = true
