[metadata]
name = mps_motion
version = 0.2.10
description = Library for tracking motion in cardiac mps data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComputationalPhysiology/mps_motion
author = Henrik Finsberg
author_email = henriknf@simula.no
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = motion tracking, computer vision, optical flow, cardiac

[options]
packages = find:
install_requires =
    ap-features
    cardiac-mps
    daiquiri
    dask-image
    dask[array,diagnostics]
    h5py
    matplotlib
    numba
    numpy
    opencv-contrib-python
    opencv-python
    scipy
    tqdm
    typer
    typing-extensions
python_requires = >=3.8
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
benchmark =
    flowiz
dev =
    black
    bump2version
    flake8
    ipython
    mypy
    pre-commit
docs =
    ipython<8.7.0
    jupyter-book
    jupytext
gui =
    streamlit
pypi =
    build
test =
    black
    flake8
    mypy
    pre-commit
    pytest
    pytest-cov

[bdist_wheel]
universal = 1

[flake8]
exclude = docs, venv
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=mps_motion --cov-report html --cov-report xml -vv --cov-report term-missing
testpaths =
    tests
filterwarnings =
    ignore::UserWarning
    ignore::DeprecationWarning

[mypy]
files = src,tests
ignore_missing_imports = true
